# GptDocAi

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER-PORTUGUES.md  DOCKER_DEPLOYMENT.md  Dockerfile  GITHUB_EXPORT.md  GOOGLE_DOCS_INTEGRATION.md  README.md  agent_service.py  app.py  docker-compose.yml  docker-deployment-guide.md  gemini_service.py  google_docs_service.py  models.py  openai_service.py  pyproject.toml  replit.md  routes.py
instance/: chatgpt_app.db
static/css/: style.css
static/js/: app.js
templates/: index.html
